# piacere-formal-verification

./: .gitignore  Dockerfile  README.md  doml_tosca_model.pl
doml_tosca_poc/: README.md  check2swipl.py  checks.pl  checks.yaml  doml_tosca.yaml  poc.py  predicates.pl  pyproject.toml  requirements.txt  tosca2swipl.py
doml_tosca_z3/: appunti.md  doml_tosca.yaml  pyproject.toml  requirements.txt  vtlang.tx  vttest.vt
doml_tosca_z3/doml_tosca_z3/: __main__.py  tosca_utils.py  vtlang_model.py  z3_utils.py  z3toscamodel.py
doml_tosca_z3/tests/: test_doml_tosca_z3.py
