[tool.poetry]
name = "doml_tosca_poc"
version = "0.1.0"
description = ""
authors = ["Michele De Pascalis <michele.de.pascalis.1024@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
# tosca-parser = "^2.3.0"
tosca-parser = { path = "../../tosca-parser", develop = true }
pyswip = "^0.2.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
