[tool.poetry]
name = "doml_tosca_z3"
version = "0.1.0"
description = ""
authors = ["Michele De Pascalis <michele.de.pascalis.1024@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
# tosca-parser = "^2.3.0"
tosca-parser = { path = "../../tosca-parser", develop = true }
z3-solver = "^4.8.12"
textX = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
